# Nekoviewer

./: .gitignore  CHANGELOG.ja.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md  setup.sh
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
docs/: README.md  architecture.md  buildoptions.md  cache-design.md  cache.md  crashbycacheandoom.md  favoritefiles-dirs.md  formats.md  implements.md  improved-favorite-icons.md  mvp.md  refactor.md  rule.md  statements.md  todo.md  v1.3.0-concerns.md  winit-migration.md
docs/decisions/: thumbbar-7z-cache.md  winit-migration.md
docs/features/: favorite-files-dirs.md  image-orientation.md  viewer-toolbar.md
local/libdav1d-sys/: Cargo.toml  build.rs
local/libdav1d-sys/src/: lib.rs
poc/winit-multiwindow/: Cargo.toml
poc/winit-multiwindow/src/: main.rs
src/: anim.rs  app.rs  cache.rs  config.rs  controller.rs  favorites.rs  gui_config.rs  i18n.rs  keymap.rs  main.rs  model.rs  model_innerlog.rs  neko_dir.rs  rotation.rs  single_instance.rs  spread_offset.rs  spread_state.rs  toolbar.rs  translate.rs  view_explorer.rs  view_gui_config.rs  view_innerlog.rs  view_reader.rs  view_status.rs  viewer.rs  winit_app.rs
src/fs/: archive.rs  dir.rs  mod.rs  mount.rs
src/fs/archive/: decode.rs  detect.rs  mod.rs  sevenz.rs  tar.rs  zip.rs
src/view_explorer/: favorites_ui.rs  glyph_audit.rs  input.rs  mod.rs  nav_icons.rs  panels.rs  scan.rs  status.rs  viewer_host.rs  workers.rs
