[package]
name = "nekoviewer"
version = "1.4.1"
edition = "2024"
license = "MIT"

[profile.release]
strip = true
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Pipes", "Win32_System_IO"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
egui = "0.35"
egui-winit = "0.35"
egui-wgpu = { version = "0.35", features = ["winit"] }
winit = "0.30"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
libavif-sys = "0.17"
zip = "2"
sevenz-rust2 = { version = "0.21", optional = true }
tar = { version = "0.4", optional = true }
ruzstd = { version = "0.8", optional = true }
flate2 = "1"
encoding_rs = "0.8"
glob = "0.3"
sha2 = "0.10"
fast_image_resize = "5"
webp = "0.3"
libwebp-sys = "0.9"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
redb = "4"
# 翻訳機能(実験的): ローカルAI(Ollama/OpenWebUI等のOpenAI互換API)への疎通・OCRリクエスト用。
# openssl は musl単一バイナリ配布と相性が悪いため rustls-tls 固定（default-features無効化でopenssl経路を断つ）。
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
# マーカー候補グリフの収録・塗りつぶし検証テスト用（epaint 経由で既にロック済みの版に合わせる）
ab_glyph = "0.2"

[features]
# zip/cbz は画像・コミックビューアの基幹形式のため常時コンパイル（feature 化しない）。
# 7z / tar のみ分離し、不要ならビルドから外してバイナリサイズと依存を削減できる。
default = ["fmt-7z", "fmt-tar", "tar-zstd"]
fmt-7z = ["dep:sevenz-rust2"]
fmt-tar = ["dep:tar"]
# tar.zst 対応。ruzstd は純 Rust の zstd 実装で C 依存を引き込まないため、単一 musl 配布と
# 両立できる。tar バックエンドが前提のため fmt-tar を暗黙有効化する。
tar-zstd = ["fmt-tar", "dep:ruzstd"]
# tar.xz は liblzma（C 依存）を要し単一 musl 配布と相性が悪いため既定で無効。現状は枠のみ。
tar-xz = []

[profile.dev.package.fast_image_resize]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[patch.crates-io]
libdav1d-sys = { path = "local/libdav1d-sys" }
